--- a/docker-ci/docker-test.yml
+++ b/docker-ci/docker-test.yml
@@ -20,10 +20,12 @@ services:
       - pg
       - mysql
       - es
+      - rabbitmq
     links:
       - pg
       - mysql
       - es
+      - rabbitmq
   pg:
     image: postgres:9.6
     environment:
@@ -34,7 +36,7 @@ services:
       MYSQL_ROOT_PASSWORD: mysql
     command: --default-authentication-plugin=mysql_native_password
   es:
-    image: docker.elastic.co/elasticsearch/elasticsearch:7.0.1
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.1.1
     environment:
       - bootstrap.memory_lock=true
       - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
@@ -42,3 +44,9 @@ services:
     ports:
       - "9300:9300"
       - "9200:9200"
+  rabbitmq:
+    image:
+      rabbitmq:3
+    environment:
+      RABBITMQ_DEFAULT_USER=user
+      RABBITMQ_DEFAULT_PASS=password
