--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "url": "git+https://github.com/mytardis/mytardis.git"
   },
   "dependencies": {
-    "@babel/core": "^7.6.3",
-    "@babel/plugin-proposal-class-properties": "^7.5.5",
-    "@babel/preset-env": "^7.6.3",
-    "@babel/preset-react": "^7.6.3",
+    "@babel/core": "^7.10.0",
+    "@babel/plugin-proposal-class-properties": "^7.10.0",
+    "@babel/preset-env": "^7.10.0",
+    "@babel/preset-react": "^7.10.0",
     "@reduxjs/toolkit": "^1.3.6",
     "angular": "^1.7.9",
     "angular-resource": "1.7.8",
@@ -22,6 +22,7 @@
     "bootstrap-3-typeahead": "^4.0.2",
     "clean-webpack-plugin": "^1.0.1",
     "clipboard": "^2.0.4",
+    "core-js": "^3.6.5",
     "css-loader": "^3.2.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^4.2.0",
@@ -59,7 +60,8 @@
     "url-loader": "^2.2.0",
     "webpack": "^4.41.2",
     "webpack-bundle-tracker": "^0.4.3",
-    "webpack-cli": "^3.3.9"
+    "webpack-cli": "^3.3.9",
+    "whatwg-fetch": "^3.2.0"
   },
   "devDependencies": {
     "@storybook/addon-actions": "^5.3.18",
