--- a/package.json
+++ b/package.json
@@ -22,7 +22,6 @@
     "bootstrap-3-typeahead": "^4.0.2",
     "clean-webpack-plugin": "^1.0.1",
     "clipboard": "^2.0.4",
-    "core-js": "^3.6.5",
     "css-loader": "^3.2.0",
     "expose-loader": "^0.7.5",
     "file-loader": "^4.2.0",
@@ -40,6 +39,7 @@
     "minimatch": "^3.0.2",
     "moment": "^2.24.0",
     "mustache": "^2.3.0",
+    "nanoid": "^3.1.10",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
@@ -68,10 +68,10 @@
     "@storybook/addon-links": "^5.3.18",
     "@storybook/addons": "^5.3.18",
     "@storybook/react": "^5.3.18",
+    "@testing-library/react": "^10.4.6",
     "babel-eslint": "^10.0.3",
     "bootlint": "^0.16.7",
-    "enzyme": "^3.10.0",
-    "enzyme-adapter-react-16": "^1.14.0",
+    "core-js": "^3.6.5",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.1",
     "eslint-config-angular": "^0.5.0",
@@ -84,7 +84,7 @@
     "grunt-contrib-qunit": "^3.1.0",
     "grunt-webpack": "^3.1.3",
     "identity-obj-proxy": "^3.0.0",
-    "jest": "^24.9.0",
+    "jest": "^26.1.0",
     "jest-fetch-mock": "^2.1.2",
     "jquery-mockjax": "^2.5.0",
     "js-yaml": "^3.13.1",
@@ -98,7 +98,7 @@
     "eslint.react": "eslint -c .eslintrc.react --ext .jsx assets/js/apps/",
     "test-build": "webpack --config test-webpack.config.js --progress --colors --mode production",
     "pretest": "npm run eslint.jquery && npm run eslint.angular && npm run eslint.react && npm run test-build",
-    "test-react": "jest --testMatch=\"<rootDir>/assets/js/apps/search/__tests__/*.spec.jsx\" --config jest.config.js",
+    "test-react": "jest --testMatch=\"<rootDir>/assets/js/apps/search/**/*.spec.jsx\" --config jest.config.js",
     "test": "grunt test --verbose && npm run test-react",
     "dev": "webpack --config webpack.config.js --progress --colors --watch --display-error-details --mode development",
     "build": "webpack --config webpack.config.js --progress --colors --mode production",
