--- a/package.json
+++ b/package.json
@@ -39,7 +39,6 @@
     "minimatch": "^3.0.2",
     "moment": "^2.24.0",
     "mustache": "^2.3.0",
-    "nanoid": "^3.1.10",
     "prop-types": "^15.7.2",
     "query-string": "^6.8.3",
     "react": "^16.10.2",
@@ -64,10 +63,11 @@
     "whatwg-fetch": "^3.2.0"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^5.3.18",
-    "@storybook/addon-links": "^5.3.18",
-    "@storybook/addons": "^5.3.18",
-    "@storybook/react": "^5.3.18",
+    "@storybook/addon-actions": "^6.0.0-rc.3",
+    "@storybook/addon-links": "^6.0.0-rc.3",
+    "@storybook/addon-storyshots": "^6.0.0-rc.3",
+    "@storybook/addons": "^6.0.0-rc.3",
+    "@storybook/react": "^6.0.0-rc.3",
     "@testing-library/react": "^10.4.6",
     "babel-eslint": "^10.0.3",
     "bootlint": "^0.16.7",
