--- a/docker-ci/Dockerfile-test
+++ b/docker-ci/Dockerfile-test
@@ -11,7 +11,8 @@ RUN apt-get update && apt-get install \
     libxi6 \
     libgconf-2-4 \
     wget \
-    slapd ldap-utils
+    slapd ldap-utils \
+    libxss1
 RUN curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add
 RUN echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
 RUN apt-get update && apt-get install -qy google-chrome-stable=${CHROME_VERSION}-1
