--- a/docker-ci/Dockerfile-test
+++ b/docker-ci/Dockerfile-test
@@ -1,6 +1,6 @@
 FROM mytardis/mytardis-run
 
-ENV CHROME_VERSION=85.0.4183.83
+RUN CHROME_DRIVER_VERSION=`curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE`
 
 USER root
 RUN apt-get update && apt-get install \
@@ -15,8 +15,8 @@ RUN apt-get update && apt-get install \
     libxss1
 RUN curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add
 RUN echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
-RUN apt-get update && apt-get install -qy google-chrome-stable=${CHROME_VERSION}-1
-RUN wget -N https://chromedriver.storage.googleapis.com/${CHROME_VERSION}/chromedriver_linux64.zip -P ~/
+RUN apt-get update && apt-get install -qy google-chrome-stable
+RUN wget -N https://chromedriver.storage.googleapis.com/$CHROME_DRIVER_VERSION/chromedriver_linux64.zip -P ~/
 RUN unzip ~/chromedriver_linux64.zip -d ~/
 RUN mv -f ~/chromedriver /usr/local/bin/chromedriver
 ENV PATH="/usr/local/bin:${PATH}"
