--- a/docker-ci/Dockerfile-test
+++ b/docker-ci/Dockerfile-test
@@ -1,6 +1,6 @@
 FROM mytardis/mytardis-run
 
-ENV CHROME_DRIVER_VERSION=`curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE`
+RUN export CHROME_DRIVER_VERSION=`curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE`
 
 USER root
 RUN apt-get update && apt-get install \
