--- a/docker-ci/Dockerfile-test
+++ b/docker-ci/Dockerfile-test
@@ -1,6 +1,7 @@
 FROM mytardis/mytardis-run
 
 USER root
+
 RUN apt-get update && apt-get install \
     -qy \
     unzip \
@@ -11,15 +12,18 @@ RUN apt-get update && apt-get install \
     wget \
     slapd ldap-utils \
     libxss1
-RUN curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add
-RUN echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list
-RUN apt-get update && apt-get install -qy google-chrome-stable
-RUN export CHROME_DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE)
-RUN wget -N https://chromedriver.storage.googleapis.com/${CHROME_DRIVER_VERSION}/chromedriver_linux64.zip -P ~/
-RUN unzip ~/chromedriver_linux64.zip -d ~/
-RUN mv -f ~/chromedriver /usr/local/bin/chromedriver
+
+RUN curl -sS -o - https://dl-ssl.google.com/linux/linux_signing_key.pub | apt-key add && \
+    echo "deb http://dl.google.com/linux/chrome/deb/ stable main" >> /etc/apt/sources.list.d/google-chrome.list && \
+    apt-get update && apt-get install -qy google-chrome-stable
+
+RUN export CHROME_DRIVER_VERSION=$(curl -sS https://chromedriver.storage.googleapis.com/LATEST_RELEASE) && \
+    wget -N https://chromedriver.storage.googleapis.com/${CHROME_DRIVER_VERSION}/chromedriver_linux64.zip -P ~/ && \
+    unzip ~/chromedriver_linux64.zip -d ~/ && \
+    mv -f ~/chromedriver /usr/local/bin/chromedriver && \
+    chmod 0755 /usr/local/bin/chromedriver
+
 ENV PATH="/usr/local/bin:${PATH}"
-RUN chmod 0755 /usr/local/bin/chromedriver
 
 RUN chown -R webapp:webapp /home/webapp
 USER webapp
