--- a/.github/workflows/mytardis-matrix-test.yml
+++ b/.github/workflows/mytardis-matrix-test.yml
@@ -8,7 +8,7 @@ jobs:
     runs-on: [ubuntu-18.04]
     strategy:
       matrix:
-        python-version: [ '3.5', '3.6', '3.7', '3.8' ]
+        python-version: [ '3.6', '3.7', '3.8' ]
     name: Python ${{ matrix.python-version }}
     steps:
     - uses: actions/checkout@v2
