--- a/requirements-base.txt
+++ b/requirements-base.txt
@@ -10,7 +10,8 @@ git+https://github.com/mytardis/django-form-utils.git@django-1.11-upgrade#egg=dj
 django-jstemplate==1.3.8
 django-registration-redux==2.9
 django-tastypie==0.14.3
-git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj2.0#egg=django-tastypie-swagger
+# django-tastypie-swagger
+git+https://github.com/mytardis/django-tastypie-swagger.git@mytardis-dj3#egg=django-tastypie-swagger
 django-user-agents==0.4.0
 django-webpack-loader==0.7.0
 django-widget-tweaks==1.4.8
